# sv-neural-operator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: model.md
examples/: demo.py
fno_pricing/: __init__.py  layers.py  loss.py  solver.py
outputs/: metrics.json
tests/: test_pricing.py
